backend/src/main/java/com/example/lms/api/error/ApiException.java
package com.example.lms.api.error;

public class ApiException extends RuntimeException {
  private final ErrorCode code;

  public ApiException(ErrorCode code, String message) {
    super(message);
    this.code = code;
  }

  public ErrorCode getCode() {
    return code;
  }
}
